<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="101dp"
            android:layout_height="91dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@id/guideline2"
            app:layout_constraintEnd_toEndOf="@id/guideline4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/icon" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/name"
            android:textSize="35dp"
            app:layout_constraintStart_toEndOf="@id/guideline4"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/city"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.12" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.20" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.80" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:rotationX="177"
            app:layout_constraintBottom_toTopOf="@id/guideline3"
            app:layout_constraintEnd_toEndOf="@id/guideline5"
            app:layout_constraintStart_toStartOf="@id/guideline4"
            app:layout_constraintTop_toTopOf="@id/guideline2"
            app:srcCompat="@drawable/picture" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@color/first"
            android:text="@string/book_an_appoinment"
            android:fontFamily="cursive"
            android:textSize="13dp"
            app:cornerRadius="20dp"
            app:icon="?attr/actionModePasteDrawable"
            app:iconGravity="textTop"
            app:layout_constraintBottom_toTopOf="@id/button11"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toStartOf="@id/guideline8"
            app:layout_constraintStart_toEndOf="@id/guideline6"
            app:layout_constraintTop_toBottomOf="@id/guideline3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button10"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@color/second"
            android:text="@string/favorite"
            app:cornerRadius="20dp"
            app:icon="@android:drawable/btn_star"
            app:iconGravity="textTop"
            app:layout_constraintBottom_toTopOf="@id/button12"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/guideline7"
            app:layout_constraintStart_toStartOf="@id/guideline8"
            app:layout_constraintTop_toBottomOf="@id/guideline3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button11"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@color/third"
            android:text="@string/online_visit"
            app:cornerRadius="20dp"
            app:icon="@android:drawable/stat_sys_headset"
            app:iconGravity="textTop"
            app:layout_constraintBottom_toTopOf="@id/guideline9"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/guideline8"
            app:layout_constraintStart_toEndOf="@id/guideline6"
            app:layout_constraintTop_toBottomOf="@id/button9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button12"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="@color/four"
            android:text="@string/home_consultation"
            android:textSize="13dp"
            app:cornerRadius="20dp"
            app:icon="@android:drawable/ic_menu_mapmode"
            app:iconGravity="textTop"
            app:layout_constraintBottom_toTopOf="@id/guideline9"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/guideline7"
            app:layout_constraintStart_toStartOf="@id/guideline8"
            app:layout_constraintTop_toBottomOf="@id/button10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />


</androidx.constraintlayout.widget.ConstraintLayout>